# smtp-client

./: .gitignore  .gitignore.save  README.md
client/: CMakeLists.txt  Makefile  client.c  client.h  common_structs.c  common_structs.h  converter.c  converter.h  files_crawler.c  files_crawler.h  logger.c  logger.h  main  main.c  network_helper.c  network_helper.h  smtp.c  smtp.h  str_helper.c  str_helper.h
client/example_maildir/: local.eml  mail1.txt  mail2.txt  mail3.txt  test_mail.eml
client/maildir/: mail2.txt  mail3.txt  testemail1.eml
client/maildir/ssemium/maildir/: :1516438971109808152453335808.tmp
client/test/: 20180118221627-0.eml  server.py  test  test.c  test_system.py  vasya@gmail.com.eml
